--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "lint-staged": "^11.1.2",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
