--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chai-spies": "^1.0.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
@@ -18,6 +19,8 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/chai-spies": "^1.0.3",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
