--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "gulu",
-  "version": "0.1.0",
+  "name": "huajuan-gulu",
+  "version": "0.0.1",
   "private": true,
+  "main":"index.js",
   "scripts": {
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-minify && karma start --single-run",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
@@ -19,6 +22,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@parcel/transformer-vue": "^2.6.2",
     "@types/chai": "^4.3.1",
     "@types/chai-spies": "^1.0.3",
     "@types/jest": "^27.0.1",
@@ -40,11 +44,20 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "karma": "^6.4.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-mocha": "^2.0.1",
+    "karma-sinon-chai": "^2.0.2",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "^11.1.2",
+    "mocha": "^10.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.7.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
