--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "huajuan-gulu",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "main":"index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
