--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "huajuan-gulu",
   "version": "0.0.1",
   "private": false,
-  "main":"index.js",
+  "main":"dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-minify && karma start --single-run",
